[package]
name = "moria"
description = "Locate debug symbols for stripped binaries."
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
repository = "https://github.com/gimli-rs/moria"

[dependencies]
failure = "0.1.1"
libc = "0.2.34"
object = { git = "https://github.com/gimli-rs/object" }
uuid = "0.5.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.4.6"
core-foundation-sys = "0.4.6"
