[package]
name = "moria"
description = "Locate debug symbols for stripped binaries."
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
repository = "https://github.com/gimli-rs/moria"

[dependencies]
cfg-if = "0.1"
failure = "0.1.1"
libc = "0.2.34"
object = "0.15.0"
uuid = "0.7"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.2"
core-foundation-sys = "0.6.2"
