[package]
name = "locate-dwarf"
description = "Locate debug symbols for stripped binaries."
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
repository = "https://github.com/gimli-rs/locate-dwarf"

[dependencies]
anyhow = "1.0.38"
cfg-if = "1.0.0"
libc = "0.2.82"
object = "0.25.2"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9.1"
core-foundation-sys = "0.8.2"
uuid = "0.8.2"
